# semantic_tester

./: .env.config.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  IFLOW.md  LICENSE  LICENSE-CN  README.md  ai_config.json.example  build_windows.bat  main.py  pyproject.toml  requirements.txt  semantic_tester.py  semantic_tester_legacy.py
docs/: AI_PROMPT_CONFIG.md  DEVELOPER_GUIDE.md  DIFY_INTEGRATION_GUIDE.md  STREAMING_AND_THINKING_SUPPORT.md  用户使用指南.md
kb-docs/: 用户使用指南.md
semantic_tester/: __init__.py  __main__.py  exceptions.py
semantic_tester/api/: __init__.py  anthropic_provider.py  base_provider.py  dify_provider.py  gemini_handler.py  gemini_provider.py  iflow_provider.py  openai_provider.py  prompts.py  provider_manager.py
semantic_tester/config/: __init__.py  env_loader.py  environment.py  settings.py
semantic_tester/excel/: __init__.py  processor.py  utils.py
semantic_tester/ui/: __init__.py  cli.py  menu.py  terminal_ui.py  worker_ui.py
semantic_tester/utils/: __init__.py  dify_template_generator.py  file_utils.py  format_utils.py  logger_utils.py  validation_utils.py
tests/: conftest.py  test_base_provider.py  test_env_loader.py  test_env_manager.py  test_excel_processor.py  test_excel_utils.py  test_exceptions.py  test_file_utils.py  test_format_utils.py  test_logger_utils.py  test_main_entry.py  test_optional_doc_name.py  test_prompts.py  test_provider_manager.py  test_provider_rotation.py  test_robust_rotation.py  test_settings.py  test_validation_utils.py  verify_rotation.py
